Harden villager inventory boundaries